--- a/views/services/postConfiguration.jade
+++ b/views/services/postConfiguration.jade
@@ -55,9 +55,9 @@ div(id="FormConfiguration", style="display: none; width: 350px")
                         table(style="width:100%")
                             tr(style="height: 50px", align="center")
                                 td(style="width:20%; cursor: pointer")
-                                    a(id="ColourHelp", onclick='AboutColours()', style="color:#bf2a36; width: 50px; font-size:10px" tkey='ColourHelp')
+                                    a(id="ColourHelp", onclick='AboutColours()', style="color1:#bf2a36; width: 50px; font-size:10px" tkey='ColourHelp')
                                 td.New
-                                    a.ButtonNucleo(id="Add", onclick='GetConfiguration(-1)', style="color:#bf2a36; width: 80px" tkey='AddCfg')
+                                    a.ButtonNucleo(id="Add", onclick='GetConfiguration(-1)', style="color1:#bf2a36; width: 80px" tkey='AddCfg')
                 // CONFIGURACIÓN
                 td(style='vertical-align:top')
                     #AddFormConfiguration.content(name="Add-Configuration", style="display: none; width:730px")
@@ -541,7 +541,7 @@ div(id="FormConfiguration", style="display: none; width: 350px")
                                                                             td.New
                                                                                 input.textbox#snmpp(style="width:60px" type="text" onblur='ValidateNumber(this,"ErrorValue");ValidatePort(this,"ErrorValue")' onfocus='this.oldValue=this.value' value='161')
                                                                             td.New(rowspan = 5 colspan=4 style='padding:0px 5px 10px 20px')
-                                                                                div(style='height: 195px; border: 2px solid; border-color: #bf2a36' ) Traps
+                                                                                div(style='height: 195px; border: 1px solid; border-color: var(--main-color)' ) Traps
                                                                                     table
                                                                                         tr
                                                                                             td(colspan=2 style='padding: 5px 5px')
