--- a/views/services/postGateway.jade
+++ b/views/services/postGateway.jade
@@ -427,7 +427,7 @@ div(id="FormGateway", style="display: none; width: 350px")
 						table(style="width:100%")
 							tr(style="height: 50px", align="center")
 								td.New
-									a.ButtonNucleo(id="NewGateway", onclick='GetGateway()', style="color:#bf2a36; width: 80px" tkey='New')
+									a.ButtonNucleo(id="NewGateway", onclick='GetGateway()', style="color1:#bf2a36; width: 80px" tkey='New')
 				td(style='vertical-align:top')
 
 div(id="loader" class="hide")
