--- a/views/services/postRadioDestination.jade
+++ b/views/services/postRadioDestination.jade
@@ -35,7 +35,7 @@ div(id="FormRadioDestinations", style="display: none" ondragend="dragEnd(event)"
 						table
 							tr
 								td.New
-									a.ButtonNucleo(id="Add", onclick='NewRadioDestination()', style="color:#bf2a36; width: 80px" tkey='New')
+									a.ButtonNucleo(id="Add", onclick='NewRadioDestination()', style="color:var(--main-color); width: 80px" tkey='New')
 				td(style='vertical-align:top; padding-top: 15px')
 					.content#AddFormDestinations
 						table#PostDestination(style="border-spacing: 15px 15px; display:none")
