--- a/views/services/postResources.jade
+++ b/views/services/postResources.jade
@@ -18,9 +18,9 @@ div(id="FormResources", style="display: none; width: 1250px")
                                         option(value='2') Radio Rx
                                         option(value='3') Teléfono
                                 td
-                                    a.ButtonNucleo(id="FilterExtResource", onclick='GetExtResources(-1)', style="color:#bf2a36; width: 80px" tkey='FilterExtResource')
+                                    a.ButtonNucleo(id="FilterExtResource", onclick='GetExtResources(-1)', style="color:var(--main-color); width: 80px" tkey='FilterExtResource')
                                 td
-                                    a.ButtonNucleo(id="NewExtResource", onclick='GetExtResource(-1)', style="color:#bf2a36; width: 80px" tkey='NewExtResource')
+                                    a.ButtonNucleo(id="NewExtResource", onclick='GetExtResource(-1)', style="color:var(--main-color); width: 80px" tkey='NewExtResource')
                 td(style='vertical-align:top')
                     #AddResources.fadeFormNucleo(style='display:none;padding-left:20px')
                         .content#DatosResources(style='width:inherit')
