--- a/views/services/postTableBss.jade
+++ b/views/services/postTableBss.jade
@@ -11,7 +11,7 @@ div(id="FormTableBss", style="display: none; width: 1250px")
 						table(style="width:100%")
 							tr(style="height: 50px", align="center")
 								td.New
-									a.ButtonNucleo(id="NewTable", onclick='GetTable(-1)', style="color:#bf2a36; width: 80px" tkey='NewTable')
+									a.ButtonNucleo(id="NewTable", onclick='GetTable(-1)', style="color:var(--main-color); width: 80px" tkey='NewTable')
 				td(style='vertical-align:top')
 					#AddTableBss.fadeFormNucleo(style='display:none;padding-left:20px')
 						.content#DatosTableBss(style='width:inherit')
