--- a/views/services/postUsuario.jade
+++ b/views/services/postUsuario.jade
@@ -17,7 +17,7 @@ div(id="FormOperador", style="display: none; width: 1250px")
 						table(style="width:100%")
 							tr(style="height: 50px", align="center")
 								td
-									a.ButtonNucleo(id="NewUser", onclick='GetUsuario(-1)', style="color:#bf2a36; width: 80px" tkey='New')
+									a.ButtonNucleo(id="NewUser", onclick='GetUsuario(-1)', style="color:var(--main-color); width: 80px" tkey='New')
 				td(style='vertical-align:top')
 					#AddFormUser.fadeFormNucleo(style='display:none;padding-left:10px')
 						.content#DatosUsuario(style='width:300px')
