--- a/views/services/resource.jade
+++ b/views/services/resource.jade
@@ -63,9 +63,9 @@ block resource
 				td
 					input.tab(type='radio',value='VoIP parameters', name='parametros')
 				td
-					a.tab(onclick='GetUsuarios()', style="color:#bf2a36; width: 100px") Audio parameters
+					a.tab(onclick='GetUsuarios()', style="color:var(--main-color); width: 100px") Audio parameters
 				td
-					a.tab(onclick='GetUsuarios()', style="color:#bf2a36; width: 100px") Functionality
+					a.tab(onclick='GetUsuarios()', style="color:var(--main-color); width: 100px") Functionality
 
 		div
 			table#propResource(style="width: 100%; padding: 10px 0px")
