--- a/public/stylesheets/tabs.css
+++ b/public/stylesheets/tabs.css
@@ -9,7 +9,7 @@
 {
     font: normal 14px arial, sans, sans-serif;
     -list-style-type: none;
-    border-bottom: 1px solid #bf2a36;
+    border-bottom: 1px solid /*#bf2a36*/var(--main-color);
     margin: 0;
     padding-left:0;
     padding-right:0;
@@ -45,7 +45,7 @@
     text-align:center;
     background-color:#eee;
     min-width:60px;
-    border-bottom: 1px solid #bf2a36;
+    border-bottom: 1px solid /*#bf2a36*/var(--main-color);
 }
 
 #tabs ul li a.selected
@@ -53,7 +53,7 @@
     color: #000;
     font-weight:bold;
     background-color: #fff;
-    border: 1px solid #bf2a36;
+    border: 1px solid /*#bf2a36*/var(--main-color);
     border-bottom: 1px solid #fff;
 }
 
@@ -67,7 +67,7 @@
 .contentTab 
 {
     background: white;
-    border:1px solid #bf2a36;
+    border:1px solid /*#bf2a36*/var(--main-color);
     border-top: none;
     min-height:60px;
     max-height:550px;
@@ -81,7 +81,7 @@
 .content
 {
     background: white;
-    border:1px solid #bf2a36;
+    border:1px solid /*#bf2a36*/var(--main-color);
     width:100%;
     padding:0;
     margin:0;
