--- a/views/services/postHRR.jade
+++ b/views/services/postHRR.jade
@@ -50,7 +50,7 @@ div(id="FormHRR", style="display: none; width: 350px")
                         table(style="width:100%")
                             tr(style="height: 50px", align="center")
                                 td(style="width:20%; cursor: pointer")
-                                    a(id="ColourHelp", onclick='AboutHRR()', style="color:#bf2a36; width: 50px; font-size:10px" tkey='HRRHelp')
+                                    a(id="ColourHelp", onclick='AboutHRR()', style="color:var(--main-color); width: 50px; font-size:10px" tkey='HRRHelp')
 
                 // CONFIGURACIÓN
                 td(style='vertical-align:top')
@@ -505,7 +505,7 @@ div(id="FormHRR", style="display: none; width: 350px")
                                                                             td.New
                                                                                 input.textbox#snmpp(style="width:60px" type="text" onblur='ValidateNumber(this,"ErrorValue");ValidatePort(this,"ErrorValue")' onfocus='this.oldValue=this.value' value='161')
                                                                             td.New(rowspan = 5 colspan=4 style='padding:0px 5px 10px 20px')
-                                                                                div(style='height: 195px; border: 2px solid; border-color: #bf2a36' ) Traps
+                                                                                div(style='height: 195px; border: 2px solid; border-color: var(--main-color)' ) Traps
                                                                                     table
                                                                                         tr
                                                                                             td(colspan=2 style='padding: 5px 5px')
