--- a/views/services/postParameters.jade
+++ b/views/services/postParameters.jade
@@ -378,8 +378,8 @@ div(id="FormParameters")
 												option(value='7') TUN-LOC
 												option(value='8') TUN-REM
 										td(style='vertical-align: top;padding-top: 30px;')
-											label(style='color:#bf2a36' tkey='TelephonicResources')  
-											div(style='border-top: 1px solid #bf2a36; width:auto; padding: 0 0 5px 0')
+											label(style='color:var(--main-color)' tkey='TelephonicResources')  
+											div(style='border-top: 1px solid var(--main-color); width:auto; padding: 0 0 5px 0')
 									tr(class='LCEN BL BC AB')
 										td
 											label(tkey='AGVN User Name')
@@ -655,8 +655,8 @@ div(id="FormParameters")
 											table(style="border-spacing: 10px 15px;width:100%")
 												tr(align="center")
 													td(style='width:100%')
-														label(style='color:#bf2a36')  Tx
-														div(style='border-top: 1px solid #bf2a36; width:auto; padding: 0 0 5px 0')
+														label(style='color:var(--main-color)')  Tx
+														div(style='border-top: 1px solid var(--main-color); width:auto; padding: 0 0 5px 0')
 															table
 																tr#TxARow1
 																	td
@@ -674,8 +674,8 @@ div(id="FormParameters")
 																		a.ButtonNucleo#BtnSelectTxB1(onclick='MakeFacedUri("#UriTxB1")') <
 												tr(align="center")
 													td(style='width:100%')
-														label(style='color:#bf2a36')  Rx
-														div(style='border-top: 1px solid #bf2a36; width:auto; padding: 0 0 5px 0')
+														label(style='color:var(--main-color)')  Rx
+														div(style='border-top: 1px solid var(--main-color); width:auto; padding: 0 0 5px 0')
 															table
 																tr#RxARow1
 																	td
@@ -698,8 +698,8 @@ div(id="FormParameters")
 											table(style="border-spacing: 10px 15px;width:100%")
 												tr(align="center")
 													td(style='width:100%')
-														label(style='color:#bf2a36')  Tx
-														div(style='border-top: 1px solid #bf2a36; width:auto; padding: 0 0 5px 0')
+														label(style='color:var(--main-color)')  Tx
+														div(style='border-top: 1px solid var(--main-color); width:auto; padding: 0 0 5px 0')
 															table
 																tr#TxARow2
 																	td
@@ -717,8 +717,8 @@ div(id="FormParameters")
 																		a.ButtonNucleo#BtnSelectTxB2(onclick='MakeFacedUri("#UriTxB2")') <
 												tr(align="center")
 													td(style='width:100%')
-														label(style='color:#bf2a36')  Rx
-														div(style='border-top: 1px solid #bf2a36; width:auto; padding: 0 0 5px 0')
+														label(style='color:var(--main-color)')  Rx
+														div(style='border-top: 1px solid var(--main-color); width:auto; padding: 0 0 5px 0')
 															table
 																tr#RxARow2
 																	td
@@ -741,8 +741,8 @@ div(id="FormParameters")
 											table(style="border-spacing: 10px 15px;width:100%")
 												tr(align="center")
 													td(style='width:100%')
-														label(style='color:#bf2a36')  Tx
-														div(style='border-top: 1px solid #bf2a36; width:auto; padding: 0 0 5px 0')
+														label(style='color:var(--main-color)')  Tx
+														div(style='border-top: 1px solid var(--main-color); width:auto; padding: 0 0 5px 0')
 															table
 																tr#TxARow3
 																	td
@@ -760,8 +760,8 @@ div(id="FormParameters")
 																		a.ButtonNucleo#BtnSelectTxB3(onclick='MakeFacedUri("#UriTxB3")') <
 												tr(align="center")
 													td(style='width:100%')
-														label(style='color:#bf2a36')  Rx
-														div(style='border-top: 1px solid #bf2a36; width:auto; padding: 0 0 5px 0')
+														label(style='color:var(--main-color)')  Rx
+														div(style='border-top: 1px solid var(--main-color); width:auto; padding: 0 0 5px 0')
 															table
 																tr#RxARow3
 																	td
@@ -792,8 +792,8 @@ div(id="FormParameters")
 							table#facedResources(style='padding: 5px 0; height:210px')
 								tr
 									td(align='center')
-										label#ResId(style='color:#bf2a36' tkey='RemoteRadioResources')
-										div(style='border-top: 1px solid #bf2a36; width:auto; padding: 0 0 5px 0')
+										label#ResId(style='color:var(--main-color)' tkey='RemoteRadioResources')
+										div(style='border-top: 1px solid var(--main-color); width:auto; padding: 0 0 5px 0')
 								tr
 									td(align='center')
 										select#CBFacedType(style='width:140px;' onchange='SelectERType($("#CBFacedType option:selected").val())')
