--- a/views/login.jade
+++ b/views/login.jade
@@ -15,11 +15,11 @@ html
 					td(style='width:15%')
 						#_contSupIzq.divCabeceraNucleo
 							#_logo
-								img#imgLogo(src="images/corporativo.png" width="100%;")
+								img#imgLogo(src="images/corporativo.png" height="85%" width="85%")
 					td(style='width:60%')
 						#_tit_ppal.divCabeceraNucleo
 							h1(style='text-align:center') ULISES G 5000 R
-							h2 #{region}						
+							h2 #{region}
 
 					td(style='width:25%')
 						.divCabeceraNucleo
@@ -46,5 +46,5 @@ html
 									input.ButtonNucleo(type="submit", value="Login")
 
 			div.divNucleo(style='margin-top: 10px;')
-				footer.footerNucleo#_pieExtern Nucleo CC Copyright ©2018..2019 Todos los Derechos Reservados.
+				footer.footerNucleo#_pieExtern Nucleo CC Copyright ©2018..2020 Todos los Derechos Reservados.
 				footer.footerNucleo#hVersion
